# boogaloo

./: .hgignore  AST.hs  BasicBlocks.hs  Boogaloo.hs  DataFlow.hs  HtmlOutput.hs  Interpreter.hs  Intervals.hs  Main.hs  Message.hs  NormalForm.hs  Parser.hs  Position.hs  PrettyPrinter.hs  Printer.hs  README.md  Tester.hs  Tests.hs  Tokens.hs  TypeChecker.hs  Util.hs  Value.hs  language-boogie.cabal  runtime.sh  runtime_big.sh  stack.yaml  todo
Language/Boogie/: AST.hs  BasicBlocks.hs  ConstraintSolver.hs  DataFlow.hs  Environment.hs  ErrorAccum.hs  Generator.hs  Heap.hs  Interpreter.hs  Intervals.hs  NormalForm.hs  Parser.hs  Position.hs  Pretty.hs  PrettyAST.hs  PrettyPrinter.hs  Solver.hs  Tester.hs  Tokens.hs  TrivialForcer.hs  TrivialSolver.hs  TypeChecker.hs  Util.hs  Z3Solver.hs
Language/Boogie/Z3/: Eval.hs  GenMonad.hs  Minimize.hs  Solution.hs  Solver.hs
examples/: Bubble.bpl  DutchFlag.bpl  Find.bpl  Invert.bpl  LinkedList.bpl  LinkedListSearch.bpl  McCarthy-91.bpl  PermPower.bpl  Pythagorean.bpl  Search.bpl  SumMax.bpl  TuringFactorial.bpl
examples/rv2013/: readme
examples/rv2013/declarative/: NQueens.bpl  Primes.bpl  SendMoreMoney.bpl  Split.bpl
examples/rv2013/verification/: ArrayMax.bpl  ArraySum.bpl  BinarySearch.bpl  BubbleSort.bpl  DutchFlag.bpl  Fibonacci.bpl  Invert.bpl  LinkedListTraversal.bpl  QuickSort.bpl  QuickSortPartial.bpl  TuringFactorial.bpl
examples/rv2013/verification_big/: ArrayMax.bpl  ArraySum.bpl  BinarySearch.bpl  BubbleSort.bpl  DutchFlag.bpl  Invert.bpl  LinkedListTraversal.bpl  ListInsert.bpl  QuickSort.bpl  QuickSortPartial.bpl  TuringFactorial.bpl
examples/rv2013/verification_buggy/: Fibonacci.bpl  LinkedListTraversal.bpl  QuickSort.bpl  QuickSortPartial.bpl
tests/: Arrays.bpl  AttributeParsing.bpl  BadLabels.bpl  ConstraintContext.bpl  Constraints.bpl  DivZero.bpl  EmptyDomains.bpl  Frame.bpl  FunBody.bpl  GenericReturn.bpl  IfThenElse.bpl  Lambda.bpl  LambdaExec.bpl  Macros1.bpl  Macros2.bpl  MapEquality.bpl  MapInit.bpl  MapLocals.bpl  MissingTV.bpl  NoGuards.bpl  OldMaps.bpl  OldND.bpl  TypeVarClash.bpl  VccPrelude.bpl  WhereResolution.bpl
