name:                language-boogie
version:             0.2
synopsis:            Interpreter and language infrastructure for Boogie.
description:         Boogaloo is an interpreter and run-time assertion checker for the Boogie intermediate verification language.
                     The package also provides a language infrastructure library, including a Boogie AST, parser, type checker, and pretty-printer.
homepage:            https://bitbucket.org/nadiapolikarpova/boogaloo
license:             BSD3
license-file:        LICENSE
author:              Nadia Polikarpova
maintainer:          nadia.polikarpova@gmail.com
category:            Language
tested-with:         GHC==7.4.1, GHC==7.6.2
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     hg
  location: https://bitbucket.org/nadiapolikarpova/boogaloo

flag boogaloo
  Description: Build the boogaloo executable
  Default:     True

flag tests
  Description: Build boogaloo-tests executable
  Default:     False

library
  exposed-modules:
      Language.Boogie.Z3.Eval,
      Language.Boogie.Z3.GenMonad,
      Language.Boogie.Z3.Solver,
      Language.Boogie.Z3.Solution,
      Language.Boogie.Solver,
      Language.Boogie.Generator,
      Language.Boogie.Util,
      Language.Boogie.TypeChecker,
      Language.Boogie.Tokens,
      Language.Boogie.Pretty,
      Language.Boogie.PrettyAST,
      Language.Boogie.Position,
      Language.Boogie.Parser,
      Language.Boogie.NormalForm,
      Language.Boogie.Interpreter,
      Language.Boogie.ErrorAccum,
      Language.Boogie.Environment,
      Language.Boogie.BasicBlocks,
      Language.Boogie.AST
  other-modules:
      Language.Boogie.Z3.Minimize
  build-depends:
      base ==4.*,
      random ==1.0.*,
      containers >=0.4 && <0.6,
      mtl ==2.1.*,
      ansi-wl-pprint >=0.6,
      html ==1.*,
      parsec ==3.1.*,
      transformers ==0.3.*,
      stream-monad ==0.4.*,
      random ==1.0.*,
      syb >=0.1,
      lens >=4.13,
      logict,
      z3 >=0.3
      
    
executable boogaloo
  main-is:             Boogaloo.hs
  ghc-options: -threaded
  build-depends:
      base ==4.*,
      random ==1.0.*,
      containers >=0.4 && <0.6,
      mtl ==2.1.*,
      ansi-wl-pprint >=0.6,
      html ==1.*,
      parsec ==3.1.*,
      transformers ==0.3.*,
      stream-monad ==0.4.*,
      random ==1.0.*,
      syb >=0.1,
      lens >=4.13,
      logict,
      z3 >=0.3,
      language-boogie ==0.2.*,
      cmdargs ==0.10.*,
      time ==1.4.*,
      ansi-terminal >=0.5
  If !flag(boogaloo)
    buildable: False  
  
executable boogaloo-tests
  main-is:             Tests.hs
  build-depends:
      base ==4.*,
      random ==1.0.*,
      containers >=0.4 && <0.6,
      mtl ==2.1.*,
      ansi-wl-pprint >=0.6,
      html ==1.*,
      parsec ==3.1.*,
      transformers ==0.3.*,
      stream-monad ==0.4.*,
      random ==1.0.*,
      syb >=0.1,
      lens >=4.13,
      z3 >=0.3,
      language-boogie ==0.2.*,
      filepath ==1.3.*,
      html ==1.*,
      HUnit ==1.2.*
  If !flag(tests)
    buildable: False  
  
